MMT-285: Fix search result spacing issue and update opacitiy for disabled features.

--- a/app/assets/stylesheets/modules/_icons.scss
+++ b/app/assets/stylesheets/modules/_icons.scss
@@ -4,7 +4,8 @@
 // Note: Needs improved naming convention
 
 .search-meta {
-  margin-bottom: 1.5em;
+  padding: 1.5em 0;
+  margin: 0;
   color: lighten($steel-blue, 20%);
 }
 
