--- a/app/assets/stylesheets/state/_modifiers.scss
+++ b/app/assets/stylesheets/state/_modifiers.scss
@@ -11,5 +11,5 @@
 
 //Disabled functionality
 .disabled {
-  opacity: 0.5;
+  opacity: 0.3;
 }
